--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
 body{
     box-sizing: border-box;
 }
+.buffered {
+    height: 20px;
+    position: relative;
+    background: #555;
+    width: 300px;
+  }
+  
+  #buffered-amount {
+    display: block;
+    height: 100%;
+    background-color: #777;
+    width: 0;
+  }
+  
+  .progress {
+    margin-top: -20px;
+    height: 20px;
+    position: relative;
+    width: 300px;
+  }
+  
+  #progress-amount {
+    display: block;
+    height: 100%;
+    background-color: #595;
+    width: 0;
+  }
